修改项目能正常运行

--- a/compnents/common/home/homeswiper/HomeSwiper.wxss
+++ b/compnents/common/home/homeswiper/HomeSwiper.wxss
@@ -1,1 +1,8 @@
 /* compnents/common/home/HomeSwiper.wxss */
+.swiper-item{
+  display: block;
+  height: 100%;
+}
+.home-swiper{
+  height: 195px;
+}
