--- a/compnents/common/home/homeswiper/HomeSwiper.wxml
+++ b/compnents/common/home/homeswiper/HomeSwiper.wxml
@@ -1,2 +1,11 @@
 <!--compnents/common/home/HomeSwiper.wxml-->
-<text>compnents/common/home/HomeSwiper.wxml</text>
+<view class="home-swiper">
+  <swiper class="home-swiper" indicator-active-color="#ffffff" indicator-dots="{{indicatorDots}}"
+    autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}">
+    <block wx:for="{{banners}}" wx:key="index">
+      <swiper-item>
+        <cover-image src="{{item.image}}"></cover-image>
+      </swiper-item>
+    </block>
+  </swiper>
+</view>
