--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,13 +1,15 @@
-<!--index.wxml-->
-<view class="container">
-  <view class="userinfo">
-    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
-    <block wx:else>
-      <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
-    </block>
-  </view>
-  <view class="usermotto">
-    <text class="user-motto">{{motto}}</text>
-  </view>
-</view>
+<!--pages/home/home.wxml-->
+<view class="home-swiper">
+      <swiper class="home-swiper" 
+      indicator-active-color="#ffffff"
+      indicator-dots="{{indicatorDots}}"
+      autoplay="{{autoplay}}" 
+      interval="{{interval}}" 
+      duration="{{duration}}">
+        <block wx:for="{{banners}}" wx:key="index">
+          <swiper-item>
+            <cover-image src="{{item.image}}"></cover-image>
+          </swiper-item>
+        </block>
+      </swiper>
+    </view>
